<resources>
    <string name="app_name">TVault</string>
    <string name="enter_value">Enter a Movie title or TV Show title</string>
    <string name="submit">Submit</string>
    <string name="api_error">The API could not find the requested movie/show.</string>
    <string name="invalid_location">The requested location is not valid. Check for spelling errors or try another location.</string>
    <string name="action_add">Add Movie/Show</string>
    <string name="action_settings">Settings</string>
    <string name="about">App Details</string>
    <string name="app_description_title">App Details</string>
    <string name="close_appdesc_dialog">Close</string>
    <string name="app_description">Authors: Tristan Durey and Jon Curnutt\n\nThis app functions
        as a vault for users to store their favorite movies and TV shows.\n\n- Click the \'Add\'
        button to add a new movie or TV show to the home screen.<b>*</b>\n\n- Select an item on the home screen
        to view more details.\n\n- Delete items from the home screen at any time.\n\n- Specify the app\'s
        theme and list ordering by selecting \'Settings\' in the app bar.\n\n<b>*<i>Users cannot specify seasons
            or episodes of TV shows; however, they can request generic data about a show.</i></b>
    </string>
    <string name="add_message">Input a movie or TV show</string>
    <string name="add_title">Add Item</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="empty_input_toast">Please enter a value.</string>
    <string name="movie_exists">"%1$s" is already in your vault.</string>
    <string name="movie_not_found">We couldn\'t find the movie\\show "%1$s"</string>
    <string name="delete">Delete</string>
    <string name="title_label">Title:</string>
    <string name="plot_label">Plot:</string>
    <string name="title_year_label">Title Year:</string>
    <string name="year_label">Year:</string>

    <string name="rating_label">Rating:</string>
    <string name="genre_label">Genre:</string>
    <string name="metascore_label">Metascore:</string>
    <string name="imdb_label">IMDB Rating:</string>
    <string name="production_label">Movie studio:</string>
    <string name="writer_label">Writer:</string>
    <string name="actors_label">Actors:</string>
    <string name="runtime_label">Runtime:</string>
    <string name="released_label">Released:</string>

    <string name="pref_title_theme">Select Theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_title_item_order">Item Order</string>
    <string name="pref_none">None</string>
    <string name="settings">Settings</string>
    <string name="details_label">Details</string>
    <string name="delete_item_toast">Tap the icon the right-hand corner to remove the selected item</string>
    <string name="total_seasons">Total Seasons: </string>

    <string-array name="pref_item_order">
        <item>Alphabetic</item>
        <item>Recently added first</item>
        <item>Oldest added first</item>
    </string-array>

    <string-array name="pref_item_order_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_theme">
        <item>Default</item>
        <item>Dark</item>
        <item>Red</item>
        <item>Blue</item>
    </string-array>

    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
