<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context="jon.curnutt.project3.DetailsActivity">

        <ImageView
            android:id="@+id/posterView"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/titleLabel"
            android:layout_marginLeft="115dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            app:layout_constraintTop_toTopOf="@id/posterView"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/titleLabel"
            app:layout_constraintLeft_toRightOf="@id/titleLabel"/>

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintLeft_toLeftOf="@id/titleLabel"/>

        <TextView
            android:id="@+id/yearText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/yearLabel"
            app:layout_constraintLeft_toRightOf="@id/yearLabel"/>

        <TextView
            android:id="@+id/ratingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/yearText"
            app:layout_constraintLeft_toLeftOf="@id/yearLabel"/>

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/ratingLabel"
            app:layout_constraintLeft_toRightOf="@id/ratingLabel"/>

        <TextView
            android:id="@+id/genreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/ratingLabel"
            app:layout_constraintLeft_toLeftOf="@id/ratingLabel"/>

        <TextView
            android:id="@+id/genreText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/genreLabel"
            app:layout_constraintLeft_toRightOf="@id/genreLabel"/>

        <TextView
            android:id="@+id/plotLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plot_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/genreText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/plotText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/plotLabel"
            app:layout_constraintLeft_toRightOf="@id/plotLabel"/>

        <TextView
            android:id="@+id/metascoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metascore_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/plotText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/metascoreText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/metascoreLabel"
            app:layout_constraintLeft_toRightOf="@id/metascoreLabel"/>

        <TextView
            android:id="@+id/imdbRatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imdb_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/metascoreText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/imdbRatingText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/imdbRatingLabel"
            app:layout_constraintLeft_toRightOf="@id/imdbRatingLabel"/>

        <TextView
            android:id="@+id/productionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/imdbRatingText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/productionText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/productionLabel"
            app:layout_constraintLeft_toRightOf="@id/productionLabel"/>

        <TextView
            android:id="@+id/writerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writer_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/productionText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/writerText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/writerLabel"
            app:layout_constraintLeft_toRightOf="@id/writerLabel"/>

        <TextView
            android:id="@+id/actorsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actors_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/writerText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/actorsText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/actorsLabel"
            app:layout_constraintLeft_toRightOf="@id/actorsLabel"/>

        <TextView
            android:id="@+id/runtimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runtime_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/actorsText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/runtimeText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/runtimeLabel"
            app:layout_constraintLeft_toRightOf="@id/runtimeLabel"/>

        <TextView
            android:id="@+id/releasedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/released_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/runtimeText"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/releasedText"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="@id/releasedLabel"
            app:layout_constraintLeft_toRightOf="@id/releasedLabel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
